--- a/fem/modern-server/package.json
+++ b/fem/modern-server/package.json
@@ -11,9 +11,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./main.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "v14.18.1"
+  },
   "author": "",
   "license": "ISC"
 }
