--- a/traversy_node/devcamper1/package.json
+++ b/traversy_node/devcamper1/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
