--- a/traversy_node/devcamper1/package.json
+++ b/traversy_node/devcamper1/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
+    "seeder": "^0.2.4",
+    "slugify": "^1.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
