--- a/traversy_node/devcamper1/.env
+++ b/traversy_node/devcamper1/.env
@@ -3,4 +3,6 @@ NODE_ENV=development
 MONGO_URI=mongodb://127.0.0.1:27017/bootcamp
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=EqA55Kb2r7AJz5LbqKy1pkISivzXkXhn
+FILE_UPLOAD_PATH = ./public/uploads
+MAX_FILE_UPLOAD = 1000000
 
