--- a/traversy_node/devcamper1/.env
+++ b/traversy_node/devcamper1/.env
@@ -5,4 +5,8 @@ GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=EqA55Kb2r7AJz5LbqKy1pkISivzXkXhn
 FILE_UPLOAD_PATH = ./public/uploads
 MAX_FILE_UPLOAD = 1000000
+JWT_SECRET=123apil875djdfkpwcx
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
+
 
